codex-rs/tui/src/snapshots/codex_tui__app__agents_fleet_view__tests__agents_fleet_all_states.snap
---
source: tui/src/app/agents_fleet_view_tests.rs
expression: popup
---
  Agent fleet
  root 00000000-0000-0000-0000-000000000801  generation 42  sealed  operationId operation-42
  ────────────────────────────────────────────────────────────────────────────────────────────────────
  › ● 00000000-0000-0000-0000-000000000801  running  00000000-0000-0000-0000-000000000801
    ●   00000000-0000-0000-0000-000000000802  waiting for tool  00000000-0000-0000-0000-000000000802
    ●   00000000-0000-0000-0000-000000000803  waiting for approval  00000000-0000-0000-0000-0000000008
    ●   00000000-0000-0000-0000-000000000804  waiting for user  00000000-0000-0000-0000-000000000804
    ○   00000000-0000-0000-0000-000000000805  idle  00000000-0000-0000-0000-000000000805
    Ⅱ   00000000-0000-0000-0000-000000000806  suspended  00000000-0000-0000-0000-000000000806
    ✓   00000000-0000-0000-0000-000000000807  closed  00000000-0000-0000-0000-000000000807
    ×   00000000-0000-0000-0000-000000000808  failed  00000000-0000-0000-0000-000000000808











  New task › Describe a task and press enter to dispatch it
  ↑ ↓ navigate  enter open  → manage  ctrl+f search  ctrl+s group  ctrl+n new  ctrl+r rename  ctrl+x s
